# proceCUDA-generator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  TODO  bench_script.sh
examples/: CMakeLists.txt  all_modules.proc  invalid_number.proc  metaball.proc  not_closed.proc  perlin.proc  spatialize.proc  sphere.proc  sphere_collapse.proc
resources/shaders/: fragment_shader.glsl  light_fragment_shader.glsl  light_vertex_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  main.cc  make_density.cc
src/app/: CMakeLists.txt  camera.cc  camera.hh  empty.cc  empty.cu  generation_kernel.hh  main.cc  main.cu  make_density.cc  make_density.cu  make_density.hh  rendering.cc  rendering.cu  rendering.hh
src/compilation/: AST.cc  AST.hh  CMakeLists.txt  CheckVisitor.cc  CheckVisitor.hh  CompileVisitor.cc  CompileVisitor.hh  DotVisitor.cc  DotVisitor.hh  Visitor.hh  main.cc  parser.cc  parser.hh
src/density/: CMakeLists.txt  F3Grid.cc  F3Grid.cu  F3Grid.hh  Sphere.hh  perlin.hh  primitive.hh
src/noise/: CMakeLists.txt  noise.hh  perlin.cc  perlin.hh
src/octree/: CMakeLists.txt  frame.cpp  frame.hh  image_block.cpp  image_block.hh  lru.cc  lru.hh  main.cpp  octree.cpp  octree.hh
src/rendering/: CMakeLists.txt  dual-contouring.cc  dual-contouring.hh  hermitian-grid.cc  hermitian-grid.hh  node.hpp  options.hpp  qr-decomposition.cpp  qr-decomposition.hpp  vertices-grid.cpp  vertices-grid.hpp
src/rendering/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  nm-matrix.cpp  nm-matrix.hpp  nm-matrix.hxx
src/rendering/viewer/: CMakeLists.txt  Makefile  camera.cc  camera.hh  cmake_install.cmake  file_reader.cc  file_reader.hh  shader.cc  shader.hh  shader_compiler.cc  shader_compiler.hh
src/utils/: cudamacro.hh  glm.hh
tests/: CMakeLists.txt
tests/benchs/: run_bench.py
tests/compilation/: CMakeLists.txt  main.cc
tests/rendering/: CMakeLists.txt  main.cc
